--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -28,7 +28,7 @@
         </div>
         <div class="container">
           <div class="content">
-            <h2>Capture and Share the World's Moments</h2>
+            <h2>Capture and Share<br> the World's Moments</h2>
             <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share
               your life
               with friends and family.</p>
