--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,9 +2,42 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
 <body>
-  Instagram
+<div id="background">
+  <div id="phone-layer">
+    <img id="phone" src="./images/phones.png">
+  </div>
+
+  <div  id="square-info">
+    <div id="top-login">
+      <div id="logo">
+        <img src="./images/brand.png">
+      </div>
+      <div id="login-button">
+        <p>Log in</p>
+        <img src="./images/home.png">
+      </div>
+    </div>
+    <div id="info">
+      <div>
+          <span>Capture and Share the World's Moments</span>
+
+          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+
+          <p>Oh yeah, did we mention it's free?</p>
+      </div>
+    </div>
+    <div id="store-action">
+      <img src="./images/badge-android.png">
+      <img src="./images/badge-iphone.png">
+    </div>
+  </div>
+</div>
+<!--   Instagram
 
   Capture and Share the World's Moments
 
@@ -26,6 +59,6 @@
   Privacy
   Terms
 
-  &copy; 2014 Instagram
+  &copy; 2014 Instagram -->
 </body>
 </html>
