atualizacao adicionado footer

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -36,6 +36,19 @@
       <img src="./images/badge-iphone.png">
     </div>
   </div>
+  <div id="nav-footer">
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+      </ul>
+      <p>&copy; 2014 Instagram</p>
+  </div>
 </div>
 <!--   Instagram
 
