--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,54 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="container">
+      <div class="container-rigth">
+          <header>
+              <img src="./images/brand.png" alt="icon">
+              
+              <button>
+                <img src="./images/home.png" alt="home">
+                <p>Log in</p>
+              </button>
+            </header>
+            
+            <div class="bg-text">
+              <h1>Capture and Share the World's Moments</h1>
+              <div class="text-info">
+                <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+                <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+                <p>Oh yeah, did we mention it's free?</p>
+              </div>
+              <div class="apps">
+                <img src="./images/badge-iphone.png" alt="Download on the App Store">
+                <img src="./images/badge-android.png" alt="Get it on Google Play">
+              </div>
+            </div>
+      </div>
+      <div class="container-left">
+        <img src="./images/phones.png" alt="phones">
+      </div>
+  </div>
+  
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="links">
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+    </ul>
+    <div class="copy">
+      <p>&copy; 2014 Instagram</p>
+    </div>
+  </div>  
 </body>
 </html>
