--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+   <head>
+      <title>Instagram</title>
+      <link rel="stylesheet" type="text/css" href="css/main.css">
+   </head>
+   <body>
+      <div class="blueDiv"></div>
+      <div class="whiteDiv"></div>
+      <div class="group">
+          <img src="images/frame.png">
+         <img src="images/brand.png">
+         <img  src="images/phones.png">
+         <button><img  src="images/home.png">Log in</button>
+         <div class="paragraphs">
+            <h2>Capture and Share the World's Moments</h2>
+            <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel,<br> 
+               then post to Instagram &mdash; it's that easy. You can even share to Facebook,<br> 
+               Twitter, Tumblr and more. It's a new way to see the world.
+            </p>
+            <p>Oh yeah, did we mention it's free?</p>
+            <div class="badges">
+               <img src="images/badge-iphone.png">
+               <img src="images/badge-android.png">
+            </div>
+         </div>
+      </div>
+      <footer>
+         <ul>
+            <li><a href="url">About Us</a></li>
+            <li><a href="url"> Support</a></li>
+            <li><a href="url"> Blog</a></li>
+            <li><a href="url"> Press</a></li>
+            <li><a href="url"> API</a></li>
+            <li><a href="url"> Jobs</a></li>
+            <li><a href="url"> Privacy</a></li>
+            <li><a href="url"> Terms</a></li>
+            <li><a href="url">&copy; 2014 Instagram</a></li>
+         </ul>
+      </footer>
+   </body>
 </html>
