--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,68 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <!-- header -->
+  <header>
+    <div class="container">
+      <!-- logo -->
+      <div class="service-logo">
+        <a target="_blanc" href="http://instagram.com"><img src="./images/brand.png" alt="Instagram"></a>
+      </div>
+      
+      <!-- login -->
+      <div class="login-btn">
+        <a href="#" class="btn-text"><img src="./images/home.png" alt="login">Log In</a>
+      </div>
+    </div>
+  </header>
+  
+  <!-- service-info -->
+  <section id="service-info">
+    <div class="container">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <!-- service-image -->
+      <div class="service-image">
+        <img src="./images/phones.png" alt="service-image">
+      </div>
+  
+      <!-- section-content -->
+      <div class="section-content">
+        <div class="section-title">
+          <h1>Capture and Share<br>the World's Moments</h1>
+        </div>
+        <div class="section-text">
+          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+        </div>
+        <!-- download-btn -->
+        <div class="downloads">
+          <a href="#"><img src="./images/badge-iphone.png" alt=""></a>
+          <a href="#"><img src="./images/badge-android.png" alt=""></a>
+        </div>
+      </div>
+    </div>
+  </section>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <!-- footer -->
+  <footer>
+    <div class="container">
+      <ul class="footer-lists">
+        <li><a class="list-item" href="#">About Us</a></li>
+        <li><a class="list-item" href="#">Support</a></li>
+        <li><a class="list-item" href="#">Blog</a></li>
+        <li><a class="list-item" href="#">Press</a></li>
+        <li><a class="list-item" href="#">API</a></li>
+        <li><a class="list-item" href="#">Jobs</a></li>
+        <li><a class="list-item" href="#">Privacy</a></li>
+        <li><a class="list-item" href="#">Terms</a></li>
+        <li><a class="list-item copy-right" href="#">&copy; 2014 Instagram</a></li>
+      </ul>
+    </div>
+  </footer>
 </body>
 </html>
