update html and css

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -8,42 +8,44 @@
 
   <!-- header -->
   <header>
-    <div class="container">
-      <!-- logo -->
-      <div class="service-logo">
-        <a target="_blanc" href="http://instagram.com"><img src="./images/brand.png" alt="Instagram"></a>
-      </div>
-      
-      <!-- login -->
-      <div class="login-btn">
-        <a href="#" class="btn-text"><img src="./images/home.png" alt="login">Log In</a>
-      </div>
-    </div>
+    <div class="container"></div>
   </header>
   
   <!-- service-info -->
   <section id="service-info">
     <div class="container">
-
+      
       <!-- service-image -->
       <div class="service-image">
         <img src="./images/phones.png" alt="service-image">
       </div>
+
+      <!-- service-content -->
+      <div class="service-content">
+        <div class="logo-btn">
+          <!-- logo -->
+            <a target="_blanc" href="http://instagram.com" class="service-logo"><img src="./images/brand.png"
+                alt="Instagram"></a>
   
-      <!-- section-content -->
-      <div class="section-content">
-        <div class="section-title">
-          <h1>Capture and Share<br>the World's Moments</h1>
+          <!-- login -->
+            <a href="#" class="btn-text login-btn"><img src="./images/home.png" alt="login">Log In</a>
         </div>
-        <div class="section-text">
-          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
-          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
-          <p>Oh yeah, did we mention it's free?</p>
-        </div>
-        <!-- download-btn -->
-        <div class="downloads">
-          <a href="#"><img src="./images/badge-iphone.png" alt=""></a>
-          <a href="#"><img src="./images/badge-android.png" alt=""></a>
+
+        <!-- section-content -->
+        <div class="section-content">
+          <div class="section-title">
+            <h1>Capture and Share<br>the World's Moments</h1>
+          </div>
+          <div class="section-text">
+            <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+          </div>
+          <!-- download-btn -->
+          <div class="downloads">
+            <a href="#"><img src="./images/badge-iphone.png" alt=""></a>
+            <a href="#"><img src="./images/badge-android.png" alt=""></a>
+          </div>
         </div>
       </div>
     </div>
