--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -6,23 +6,30 @@
    </head>
    <body>
       <div class="blueDiv"></div>
-      <div class="whiteDiv"></div>
-      <div class="group">
-          <img src="images/frame.png">
-         <img src="images/brand.png">
-         <img  src="images/phones.png">
-         <button><img  src="images/home.png">Log in</button>
-         <div class="paragraphs">
-            <h2>Capture and Share the World's Moments</h2>
-            <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
-            <p>Take a picture or video, choose a filter to transform its look and feel,<br> 
-               then post to Instagram &mdash; it's that easy. You can even share to Facebook,<br> 
-               Twitter, Tumblr and more. It's a new way to see the world.
-            </p>
-            <p>Oh yeah, did we mention it's free?</p>
-            <div class="badges">
-               <img src="images/badge-iphone.png">
-               <img src="images/badge-android.png">
+      <div class="whiteDiv">
+         <div class="group">
+            <!-- <img src="images/frame.png">-->
+            <img id="phone" src="images/phones.png">
+            <div class="right">
+               <div class="head">
+                  <img src="images/brand.png">
+                  <button><img  src="images/home.png"> Log in</button>
+               </div>
+               <div class="paragraphs">
+                  <div class="paragraphs2">
+                     <h2>Capture and Share <br> World's Moments</h2>
+                     <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+                     <p>Take a picture or video, choose a filter to transform its look and feel,<br> 
+                        then post to Instagram &mdash; it's that easy. You can even share to Facebook,<br> 
+                        Twitter, Tumblr and more. It's a new way to see the world.
+                     </p>
+                     <p>Oh yeah, did we mention it's free?</p>
+                     <div class="badges">
+                        <img src="images/badge-iphone.png">
+                        <img id="googleplay" src="images/badge-android.png">
+                     </div>
+                  </div>
+               </div>
             </div>
          </div>
       </div>
@@ -36,7 +43,7 @@
             <li><a href="url"> Jobs</a></li>
             <li><a href="url"> Privacy</a></li>
             <li><a href="url"> Terms</a></li>
-            <li><a href="url">&copy; 2014 Instagram</a></li>
+            <li><a id="copy" href="url">&copy; 2014 Instagram</a></li>
          </ul>
       </footer>
    </body>
