--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,57 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="blue-image">
 
-  Capture and Share the World's Moments
+  </div>
+  <div class="container">
+    
+    <img src="images/phones.png" alt="phones"/>
+    <div class = "rgCon">
+      <div>
+          <div class="login">
+            <img src="images/brand.png" alt="logo">
+            <button><img src="images/home.png" alt="home">Log In</button>
+          </div>
+        <div class="txt">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <h1 class="bColor">Capture and Share the World's Moments</h1>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <p>
+          Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.
+        </p>
+        <p>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        </p>
+        <p>
+          Oh yeah, did we mention it's free?
+        </p>  
+      
 
-  Oh yeah, did we mention it's free?
+        <a href="#"><img src="images/badge-iphone.png" alt="iphone"></a>
+        <a href="#"><img src="images/badge-android.png" alt="android"></a>
+        </div>
 
-  Download on the App Store
-  Get it on Google Play
+    </div>
+  </div>
+</div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    <div class="footer bColor">
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li> &copy; 2014 Instagram</li>
+      </ul>
+    </div>
+  
 </body>
 </html>
