--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,47 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600&display=swap" rel="stylesheet">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="blue-background">
+  </div>
+  
+  <section class="main-content">
+    <div class="phones">
+      <img src="images/phones.png" alt="phone-screenshot">
+    </div>
+    <div class="information">
+      <div class="log-in">
+        <img src="images/brand.png" alt="instagram-brand">
+        <button class="btn"><img src="images/home.png" alt="home-button">Log-in</button>
+      </div>
+      <div class="white-background">
+        <div class="details">
+          <h3>Capture and Share <br>the World's Moments</h3>
+          <p>Instagram is a <strong>fast, beautiful and fun </strong>way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <div>
+            <img src="images/badge-iphone.png" alt="download-apple" class="badges">
+            <img src="images/badge-android.png" alt="download-android" class="badges">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <footer>
+    <p>About Us</p>
+    <p>Support</p>
+    <p>Blog</p>
+    <p>Press</p>
+    <p>API</p>
+    <p>Jobs</p>
+    <p>Privacy</p>
+    <p>Terms</p>
+    <p>&copy; 2014 Instagram</p>
+  </footer>
+  
 </body>
 </html>
