webptmad0819 Jeremy Mendoza

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,69 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="bluediv">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  </div>
+  <div class="main-box">
+    <div class="row">
+      <section>
+        <figure>
+          <img src="images/phones.png" alt="phone photos">
+        </figure>  
+      </section>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <section class="w50">
+        <div class="space-between align-items p10">
+          <figure class="margin-left-zero">
+            <img src="images/brand.png" alt="instagram logo">
+          </figure> 
 
-  Oh yeah, did we mention it's free?
+          <div>
+            <button type="button" class="login-button row space-around align-items">
+              <span>
+                <img src="images/home.png" alt="log-in-logo">
+              </span>
+              <span><strong>Log in</strong></span>
+            </button>
+          </div>  
+        </div>
 
-  Download on the App Store
-  Get it on Google Play
+        <main class="main-background column space-between">
+          <div class="p50">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>
+            Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  &copy; 2014 Instagram
+            Oh yeah, did we mention it's free?
+          </p>
+          </div>
+          <div class="p10">
+            <span class="pad-img-stores"><img src="images/badge-iphone.png" alt="badge-iphone"></span>
+            <span><img src="images/badge-android.png" alt="badge-android"></span>
+          </div>
+        </main>
+      </section>
+    </div>
+
+  <footer class="horizontal-center">
+    <ul class="ul-a space-around">
+      <li><a href="#"><strong>About Us</strong></a></li>
+      <li><a href="#"><strong>Support</strong></a></li>
+      <li><a href="#"><strong>Blog</strong></a></li>
+      <li><a href="#"><strong>Press</strong></a></li>
+      <li><a href="#"><strong>API</strong></a></li>
+      <li><a href="#"><strong>Jobs</strong></a></li>
+      <li><a href="#"><strong>Privacy</strong></a></li>
+      <li><a href="#"><strong>Terms</strong></a></li>
+      <span><strong>&copy; 2014 Instagram</strong></span>
+    </ul>
+  </footer>
+  </div>
 </body>
 </html>
