--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="bgtile">
+    <div class="display">
+      <div class="content">
+        <div class="phones-image-container">
+          <img src="./images/phones.png" alt="phones image" width="400px" height="auto">
+        </div>
+        <div class="content-2">
+          <div class="home">
+            <img src="./images/brand.png" alt="brand image">
+            <div class="log-in">
+              <a href=""><img src="./images/home.png" alt="home image">Log in</a>
+            </div>
+          </div>
+          <div class="description">
+            <div>
+              <h1>Capture and Share<br>the World's Moments</h1>
+            </div>
+            <div>
+              <p>
+                Instagram is a fast, beautiful and fun way to share your life
+                <br>with friends and family.
+              </p>
+              <p>
+                Take a picture or video, choose a filter to transform its look
+                <br>and feel, then post to Instagram &mdash; it's that easy. You can
+                <br>even share to Facebook, Twitter, Tumblr and more. It's a
+                <br>new way to see the world.
+              </p>
+              <p>
+                Oh yeah, did we mention it's free?
+              </p>
+            </div>
+            <div class="stores">
+              <img src="./images/badge-iphone.png" alt="" class="stores-img">
+              <img src="./images/badge-android.png" alt="" class="stores-img">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="info">
+      <ul class="info-list">
+        <li class="no-list-style"><a href="" class="no-decoration blue">About Us</a></li>
+        <li class="no-list-style"><a href="" class="no-decoration blue">Support</a></li>
+        <li class="no-list-style"><a href="" class="no-decoration blue">Blog</a></li>
+        <li class="no-list-style"><a href="" class="no-decoration blue">Press</a></li>
+        <li class="no-list-style"><a href="" class="no-decoration blue">API</a></li>
+        <li class="no-list-style"><a href="" class="no-decoration blue">Jobs</a></li>
+        <li class="no-list-style"><a href="" class="no-decoration blue">Privacy</a></li>
+        <li class="no-list-style"><a href="" class="no-decoration blue">Terms</a></li>
+        <li class="no-list-style"><a href="" class="no-decoration gray">&copy; 2014 Instagram</a></li>
+      </ul>
+    </div>
+  </div>
 </body>
+
 </html>
