--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <link rel="stylesheet" type="text/css" href="/starter-code/css/main.css">
   <title>Instagram</title>
 </head>
-<body>
-  Instagram
 
-  Capture and Share the World's Moments
+<body class="back-body">
+  <div class="main">
+    <div style="width: 38%;">
+      <img class="imgCellphone" src="/starter-code/images/phones.png">
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="textRight">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <div style="width: 100%;margin-left: 11%">
+        <img class="imgCellphone" style="max-width: 70%;max-height: 71%;" src="/starter-code/images/brand.png">
+        <img class="imgCellphone" style="margin-left: 10%;margin-bottom: 5%" src="/starter-code/images/home.png">
+        <div><span class="login">Log in</span></div>
+      </div>
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
+      <div class="wrapper">
+        <div class="divimage"></div>
+        <div class="divtext">
+          <h2 style="font-size: 21px;">Capture and Share<br> the World's Moments</h2><br>
+          <span style="font-size: 12px;"> Instagram is a fast, beautiful and fun way to share your life with friends and
+            family.<br>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that
+            easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
 
-  &copy; 2014 Instagram
+            Oh yeah, did we mention it's free?</span>
+        </div>
+
+      </div>
+      <div style="width: 100%; margin-left: 15%;">
+        <img class="imgCellphone" src="/starter-code/images/badge-iphone.png">
+        <img class="imgCellphone" style = "padding-left: 5%" src="/starter-code/images/badge-android.png">
+      </div>
+
+    </div>
+  </div>
+  <footer class="lastButnotleast">
+    <div>About Us</div> 
+    <div>Support</div> 
+    <div>Blog</div> 
+    <div>Press</div> 
+    <div>API</div> 
+    <div>Jobs</div> 
+    <div>Privacy</div> 
+    <div>Terms</div> 
+    <div>&copy; 2014 Instagram</div> 
+  </footer>
 </body>
+
 </html>
