--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="main-page">
+    <img class="phone" src="./images/phones.png" alt="phones.png">
+    <div class="main-page-info">
+      <div class="main-page-images">
+        <img class="instagram-img" src="./images/brand.png" alt="instagram.png">
+        <button class="home-btn">
+          <img src="./images/home.png" alt="log-in-logo">
+          <p>Log in</p>
+        </button>
+      </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <div class="text-info">
+        <h1>Capture and Share <br />
+          the World's Moments</h1>
+        <br>
+        <p>Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life <br>
+          with friends and family.</p>
+        <br>
+        <p>Take a picture or video, choose a filter to transform its look <br>
+          and feel, then post to Instagram &mdash; it's that easy.You can <br>
+          even share to Facebook, Twitter, Tumblr and more. It's a <br>
+          new way to see the world.
+        </p>
+        <br>
+        <p>Oh yeah, did we mention it's free?</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <div class="download-app">
+          <button class="btn-download">
+            <img src="./images/badge-iphone.png">
+          </button>
+          <button class="btn-download">
+            <img src="./images/badge-android.png">
+          </button>
+        </div>
+      </div>
 
-  Oh yeah, did we mention it's free?
+    </div>
+  </div>
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <footer class="footer-container">
+    <ul class="footer-container-ul">
+      <li><a href="#">About us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li><span>&copy; 2014 Instagram</span></li>
+    </ul>
+  </footer>
 
-  &copy; 2014 Instagram
 </body>
+
 </html>
