ejercicio instagram resuelto

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="blue-background"></div>
+    <div class="container">
+      <div class="container-left">
+        <img src="https://i.ibb.co/zf3ZnMB/phones.png" alt="phones"/>
+      </div>
+      <div class="container-right">
+        <div class="download">
+          <div class="container-right-inst"><img src="https://i.ibb.co/Brc63Y9/brand.png" alt="brand instagram"/></div>
+          <div class="container-right-sign">
+            <div class="container-right-home"><img src="https://i.ibb.co/4PSBp36/home.png" alt="home"></div>
+            <div class="container-right-login">Log in</div>
+          </div>
+        </div>
+        <div class="container-white">
+          <div class="container-2">
+            <div class="capture">
+                  Capture and Share<br /> 
+                  the World's Moments
+            </div>
+              <div class="text">
+                Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.<br />
+                <br />
+                Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br />
+                <br />
+                Oh yeah, did we mention it's free?
+              </div>
+            </div>
+          </div>
+          <div class="download">
+            <div class="apple"></div>
+            <div class="android"></div>
+          </div>
+        </div>
+              <div class="links">
+                <div class="links-list">
+                  <li>About Us</li>
+                  <li>Support</li>
+                  <li>Blog</li>
+                  <li>Press</li>
+                  <li>API</li>
+                  <li>Jobs</li>
+                  <li>Privacy</li>
+                  <li>Terms</li>
+                  <li>&copy; 2014 Instagram</li>
+                </div>
+              </div>
+    </div>
 </body>
 </html>
