--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,22 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+  <link rel="stylesheet" href="./css/main.css">
 <head>
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <div class="top">
 
-  Capture and Share the World's Moments
+  </div>
+  
+  <div class="box">
+    <div>
+      <img src="./images/phones.png" alt="Phones">
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="box-text">
+    <div class="per">
+      <img src="./images/brand.png" alt="Instagram">
+      <img src="./images/home.png" alt="Home">
+    </div>
+        
+      <tittle>Capture and Share the World's Moments</tittle>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <p>  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Oh yeah, did we mention it's free?
+          Take a picture or video, chocse a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Download on the App Store
-  Get it on Google Play
+          Oh yeah, did we mention it's free?</p>
+      <img src="./images/badge-iphone.png" alt="Download on the App Store">
+      <img src="images/badge-android.png" alt="Get it on Google Play">
+    </div>
+  </div>
+  <div class="bottom">
 
+  </div>
+<nav>
   About Us
   Support
   Blog
@@ -25,7 +43,7 @@
   Jobs
   Privacy
   Terms
-
   &copy; 2014 Instagram
+</nav>
 </body>
 </html>
