--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,44 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="content">
+    <div class="box">
+      <div class="col-left">
+        <img src="images/phones.png" alt="iphone">
+      </div>
+      <div class ="col-right">
+        <div class="title-content">
+          <img class="brand-image" src="images/brand.png" alt="Instagram">
+          <a class="my-button" href="#" ><img class="logo-button" src="images/home.png" alt="log in">Log in</a>
+        </div>
+        <div class="main-content">
+          <h2>Capture and Share<br/>the World's Moments</h2>
+          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <div class="download-content">
+              <img src="images/badge-iphone.png" alt="Download on the App Store">
+              <img src="images/badge-android.png" alt="Get it on Google Play">
+            </div>
+        </div>      
+      </div>
+    </div>
+    <div class="footer">
+      <ul class="menu-footer">
+        <li class="element-menu">About Us</li>
+        <li class="element-menu">Support</li>
+        <li class="element-menu">Blog</li>
+        <li class="element-menu">Press</li>
+        <li class="element-menu">API</li>
+        <li class="element-menu">Jobs</li>
+        <li class="element-menu">Privacy</li>
+        <li class="element-menu">Terms</li>      
+        <li class="element-menu copyrigth">&copy; 2014 Instagram</li>
+    </ul>
+    </div>
+  </div>
 </body>
 </html>
