--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -15,20 +15,28 @@
   </div>
 
   <div class="box-text">
-    <div class="per">
+    <div class="logo">
       <img src="./images/brand.png" alt="Instagram">
-      <img src="./images/home.png" alt="Home">
+      <div class="logIn">        
+      <img src="./images/home.png" alt="Home" width="25px" height="22px" >
+      <h5>Log In</h5>
+      </div>
     </div>
         
-      <tittle>Capture and Share the World's Moments</tittle>
+      <tittle>Capture and Share</br>the World's Moments</tittle>
 
-        <p>  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with 
+          friends and family.</br></br>
 
-          Take a picture or video, chocse a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          Take a picture or video, chocse a filter to transform its look and feel, then post
+          to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr
+          and more. It's a new way to see the world.</br></br>
 
           Oh yeah, did we mention it's free?</p>
-      <img src="./images/badge-iphone.png" alt="Download on the App Store">
-      <img src="images/badge-android.png" alt="Get it on Google Play">
+      <div class="app">
+      <img src="./images/badge-iphone.png" class="app" alt="Download on the App Store">
+      <img src="images/badge-android.png" class="app" alt="Get it on Google Play">
+      </div>
     </div>
   </div>
   <div class="bottom">
