--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+  <head>
+    <title>Instagram</title>
+    <link rel="stylesheet" href="../starter-code/css/main.css" />
+  </head>
+  <body>
+    <body>
+      <div class="container">
+        <div class="box"><img src="images/phones.png" /></div>
+        <div class="box">
+          <div class="display-flex flex-row">
+            <img src="images/brand.png" />
+            <button class="btn display-flex flex-row">
+              <img src="images/home.png" />
+              <a href="#">Log In</a>
+            </button>
+          </div>
+          <div class="box-text">
+            <h2>Capture and Share the World's Moments</h2>
+            <p>
+              Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to
+              share your life with friends and family.
+            </p>
+            <p>
+              Take a picture or video, choose a filter to transform its look and
+              feel, then post to Instagram &mdash; it's that easy. You can even
+              share to Facebook, Twitter, Tumblr and more. It's a new way to see
+              the world.
+            </p>
+            <p>Oh yeah, did we mention it's free?</p>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+            <img src="images/badge-iphone.png" />
+            <img src="images/badge-android.png" />
+          </div>
+        </div>
+      </div>
+      <div class="list">
+        <ul>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy Us</a></li>
+          <li><a href="#">Terms</a></li>
+          <li id="copyright">&copy; 2014 Instagram</li>
+        </ul>
+      </div>
+    </body>
+  </body>
 </html>
