--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,58 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+<section class="c-dark-blue">
+  <img  class="img-phones" src="images/phones.png">
+  <div class="w-60 p-5">
+      <div class="title">
+          <img src="images/brand.png">
+          <button class="btn-false bg-light-blue">
+            <a href="#">
+              <img src="images/home.png">
+              Log In
+            </a>
+          </button>
+        </div>
+      <article>
+          <h4 class="c-dark-blue">
+              Capture and Share the World's Moments
+            </h4>
+          <div>
+              <p>
+                Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
+              </p>
+               <p>
+              Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+               </p>
+            <p>
+             Oh yeah, did we mention it's free?
+            </p>
+            </div>
+            <div>
+            <img src="images/badge-iphone.png">
+            </div>
+            <div>
+                <img src="images/badge-android.png">
+            </div>
+    </article> 
+  </div>
+  
+ </section>
+<footer>
+  <ul>
+    <li>About Us</li>
+    <li>Support</li>
+    <li>Blog</li>
+    <li>Press</li>
+    <li>API</li>
+    <li>Jobs</li>
+    <li>Privacy</li>
+    <li>Terms</li>
+    <li>&copy; 2014 Instagram</li>
+  </ul>
+</footer>
 </body>
 </html>
