--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,57 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
+<div class="background">
+  <div class="blue-box"></div>
+</div>
+<div class="container">
+  <div class="left-bar">
+    <div class="mockups">
+      <img src="images/phones.png">
+    </div>
+  </div>
+  
+  <div class="right-bar">
+    <div class="logo-login">
+      <img src="images/brand.png">
+      <button class="button">
+        <img src="images/home.png">
+        Log in
+      </button>
+    </div>
 
-  Capture and Share the World's Moments
+    <div class="card">
+        <h2>Capture and Share the World's Moments</h2>
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.<br><br>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>
+          
+            Oh yeah, did we mention it's free?</p>
+        <div class="download-buttons">
+          <div class="app-store">
+            <img src="images/badge-iphone.png">
+          </div>
+          <div class="google-play">
+            <img src="images/badge-android.png">
+          </div>
+        </div>
+    </div>
+  </div>
+</div>
+<div class="footer">
+    <ul>
+      <li>ABOUT US</li>
+      <li>SUPPORT</li>
+      <li>BLOG</li>
+      <li>PRESS</li>
+      <li>JOBS</li>
+      <li>PRIVACY</li>
+      <li>TERMS</li>
+      <li id="copyright">&copy; 2014 Instagram</li>
+    </ul>
+</div>
 </body>
 </html>
