--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="bg-back"></div>
+  <div class="bg"></div>
+  <div class="bg-deg"></div>
+  <div class="center">
+    <img src="images/phones.png" alt="phonesLogo" class="phones">
+    <div class="block-right">
+      <div class="log-in">
+        <img src="images/brand.png" alt="brandLogo">
+        <button><img src="images/home.png" alt="homeIcon"><strong>Log in</strong></button>
+      </div>
+      <div class="description">
+        <h1>Capture and Share<br>the World's Moments</h1>
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <a href="#"><img src="images/badge-iphone.png" alt="badgeIphoneLogo"></a>
+        <a href="#"><img src="images/badge-android.png" alt="badgeAndroidLogo"></a>
+      </div>
+    </div>
+  </div>
+  <div class="footer">
+    <ul>
+      <li><a href="#"><strong>About Us</strong></a></li>
+      <li><a href="#"><strong>Support</strong></a></li>
+      <li><a href="#"><strong>Blog</strong></a></li>
+      <li><a href="#"><strong>Press</strong></a></li>
+      <li><a href="#"><strong>API</strong></a></li>
+      <li><a href="#"><strong>Jobs</strong></a></li>
+      <li><a href="#"><strong>Privacy</strong></a></li>
+      <li><a href="#"><strong>Terms</strong></a></li>
+      <li class="copy"><strong>&copy;2014 Instagram</strong></li>
+    </ul>
+  </div>
 </body>
 </html>
