--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -32,10 +32,10 @@
              Oh yeah, did we mention it's free?
             </p>
             </div>
-            <div>
+            <div class="mobile">
             <img src="images/badge-iphone.png">
             </div>
-            <div>
+            <div class="mobile">
                 <img src="images/badge-android.png">
             </div>
     </article> 
@@ -44,14 +44,14 @@
  </section>
 <footer>
   <ul>
-    <li>About Us</li>
-    <li>Support</li>
-    <li>Blog</li>
-    <li>Press</li>
+    <li>ABOUT US</li>
+    <li>SSUPPORT</li>
+    <li>BLOG</li>
+    <li>PRESS</li>
     <li>API</li>
-    <li>Jobs</li>
-    <li>Privacy</li>
-    <li>Terms</li>
+    <li>JOBS</li>
+    <li>PRIVACY</li>
+    <li>TERMS</li>
     <li>&copy; 2014 Instagram</li>
   </ul>
 </footer>
