final version without animations

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="css/main.css">
 <head>
   <title>Instagram</title>
 </head>
-<body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="banner">
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<body class="main">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <div class="mainBlock">
+    <div class="image">
+      <img id="phones" src="images/phones.png" alt="Phones with Instagram">
+    </div>
+    <div class="container">
+      <div class="logIn">
+        <a href=""><img id="instagram-logo" src="images/brand.png" alt="Instagram Logo"></a>
 
-  Oh yeah, did we mention it's free?
+        <div class="button">
+          <img  src="images/home.png" alt="Home Button">
+          <a class="myButton" href="">Log in</a>
+        </div>
+      </div>
+      <div class="textBlock">
+      <h1>Capture and Share<br> the World's Moments</h1>
 
-  Download on the App Store
-  Get it on Google Play
+      <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.<br><br>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      Take a picture or video, choose a filter to transform its look <br> and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  &copy; 2014 Instagram
+      <br><br>Oh yeah, did we mention it's free?</p>
+      </div>
+      <div class="downloads">
+        <a href=""><img src="images/badge-iphone.png" alt="Download for Iphone Button"></a>
+        <a href=""><img src="images/badge-android.png" alt="Download for Android Button"></a>
+      </div>
+    </div>
+  </div>
+  <div class="footer">
+    <footer>
+      <ul>
+        <a href=""><li>About Us</li></a>
+        <a href=""><li>Support</li></a>
+        <a href=""><li>Blog</li></a>
+        <a href=""><li>Press</li></a>
+        <a href=""><li>API</li></a>
+        <a href=""><li>Jobs</li></a>
+        <a href=""><li>Privacy</li></a>
+        <a href=""><li>Terms</li></a>
+        <li id="copywrite">2014 Instagram</li>
+      </ul>
+    </footer>
+  </div>
+
 </body>
 </html>
